# learning-factory-server

./: .gitignore  .gitmodules  README.md  setup.cfg  tox.ini
.github/workflows/: automated-test.yml
server/: __init__.py  server.py
server/hardware/: __init__.py  bt.py
server/machine_interfaces/: __init__.py  base.py  cnc_lathe.py  haas.py  haas_constants.yaml
server/utils/: __init__.py  config_utils.py
tests/: benchmark_server.py  benchmark_server_horizontal_scaling.py  test_haas_interface.py  test_server.py
tests/integration/: cnc_lathe_integration.py
tests/test_interfaces/: test_cnc_lathe_interface.py  test_machine_interface_base.py
tests/test_utils/: test_config_utils.py
