[metadata]
name = learning-factor-server
version = 0.0.1
author = Ryan Singman
author_email = ryanjs@vt.edu
description = Learning Factory Server, for use by Virginia Tech ISE Department
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CNC-lathe/learning-factory-server
project_urls = 
    Issue Tracker = https://github.com/CNC-lathe/learning-factory-server/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires = 
    pyzmq >= 22.0.3